--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Lint with flake8
       run: |
         pip install flake8
-        flake8 . --max-line-length=120 --exclude=venv,migrations --ignore=E501,F401,E261,W291,E303 || true
+        flake8 . --max-line-length=120 --exclude=venv,migrations --ignore=E501,F401,E261,W291,E303 
 
     - name: Run Tests
       run: |
