--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 asgiref==3.8.1
+autopep8==2.3.2
 dj-database-url==2.3.0
 Django==5.2
 et_xmlfile==2.0.0
 gunicorn==23.0.0
-numpy==2.2.4
+numpy==1.26.4
 openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 psycopg2-binary==2.9.10
+pycodestyle==2.13.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2025.2
